# muziko

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.sh  icon.icns  licenses.sh  muziko.desktop  privacy.md  qtquickcontrols2.conf  windeployqt.cmake.in
.github/: codeql-analysis.yml  macos-build.yml  windows-build.yml
.github/workflows/: codeql-analysis.yml  linting.yml  linux-build.yml  macos-build.yml  windows-build.yml
.reuse/: dep5
LICENSES/: LicenseRef-Pixabay.txt
android/: AndroidManifest.xml  gradle.properties
android/cpp/: AndroidNotifierService.cpp
android/res/drawable/: splashscreen.xml  splashscreen_land.xml  splashscreen_port.xml
android/src/dev/lorendb/muziko/: NotifierReceiver.java  NotifierService.java
cmake/: MuzikoVersion.h.in
cpp/: CppHelper.cpp  CppHelper.h  FaviconProvider.cpp  FaviconProvider.h  Muziko.cpp  Muziko.h  Settings.cpp  Settings.h  SongsModel.cpp  SongsModel.h  main.cpp
installer/: components.qs  controller.qs
installer/icons/: WindowIcon.png.license
installer/pages/: InstallType.ui
qml/: AboutPage.qml  AddInstrumentPage.qml  AddSongPage.qml  BackupRestorePage.qml  ConfettiEffect.qml  EditSongPage.qml  Main.qml  MetronomePage.qml  SettingsPage.qml  SongCheckbox.qml  SongInfoPopup.qml  SongsPage.qml  main.qml
qml/icons/: edit.svg.license  logo.svg.license
qml/res/: confettiparticle.svg.license  metronome.wav.license
rs/: Cargo.toml  build.rs
rs/src/: lib.rs  muziko.rs
tests/: SongsFilterModelTest.cpp
