# SPDX-FileCopyrightText: Loren Burkholder
#
# SPDX-License-Identifier: GPL-3.0

[package]
name = "muziko_rs"
version = "0.0.1"
edition = "2021"
authors = ["Loren Burkholder <computersemiexpert@outlook.com>"]
license = "GPL-3.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.107"
cxx-qt = "0.5.3"
cxx-qt-lib = "0.5.3"

[build-dependencies]
cxx-qt-build = "0.5.3"

# [features]
# link_qt_object_files = ["cxx-qt-build/link_qt_object_files"]
